--- a/css/help.css
+++ b/css/help.css
@@ -1,5 +1,5 @@
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/Eudoxus/img/help_cover.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/sδι1400301/img/help_cover.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
